--- a/symfony/docker/docker-compose.yml
+++ b/symfony/docker/docker-compose.yml
@@ -5,7 +5,7 @@ webapp:
     - ./vhosts/:/etc/nginx/conf.d/
   restart: on-failure:5
 webapp_php:
-  image: advice/php:5.6
+  build: ./php7
   working_dir: /app/
   environment:
     APP_ENV: development
