--- a/symfony/docker/php7/Dockerfile
+++ b/symfony/docker/php7/Dockerfile
@@ -5,6 +5,8 @@ RUN \
     echo "http://dl-cdn.alpinelinux.org/alpine/edge/testing" >> /etc/apk/repositories && \
     apk --update add \
         php7 \
+        php7-dom \
+        php7-ctype \
         php7-curl \
         php7-fpm \
         php7-gd \
@@ -12,15 +14,15 @@ RUN \
         php7-json \
         php7-mbstring \
         php7-mcrypt \
+        php7-mysqlnd \
         php7-opcache \
         php7-pdo \
-	    php7-pdo_mysql \
+        php7-pdo_mysql \
         php7-posix \
         php7-session \
         php7-xml \
         php7-iconv \
         php7-phar \
-        php7-ctype \
         php7-openssl \
         php7-xdebug \
     && rm -rf /var/cache/apk/*
