--- a/symfony/app/config/security.yml
+++ b/symfony/app/config/security.yml
@@ -1,11 +1,19 @@
 # To get started with security, check out the documentation:
 # http://symfony.com/doc/current/book/security.html
 security:
-
+    encoders:
+        Symfony\Component\Security\Core\User\User: plaintext
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
         in_memory:
-            memory: ~
+            memory:
+                users:
+                    ryan:
+                        password: ryanpass
+                        roles: 'ROLE_USER'
+                    admin:
+                        password: kitten
+                        roles: 'ROLE_ADMIN'
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -15,6 +23,9 @@ security:
 
         main:
             anonymous: ~
+            form_login:
+              login_path: login
+              check_path: login
             # activate different ways to authenticate
 
             # http_basic: ~
