--- a/symfony/app/config/security.yml
+++ b/symfony/app/config/security.yml
@@ -3,6 +3,9 @@
 security:
     encoders:
         Symfony\Component\Security\Core\User\User: plaintext
+        AppBundle\Entity\User:
+            algorithm: plaintext
+#            algorithm: bcrypt
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
         in_memory:
@@ -14,6 +17,10 @@ security:
                     admin:
                         password: kitten
                         roles: 'ROLE_ADMIN'
+        our_db_provider:
+            entity:
+                class: AppBundle:User
+                property: username
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -23,9 +30,25 @@ security:
 
         main:
             anonymous: ~
+            logout:
+              path:   /logout
+              target: /logged
             form_login:
               login_path: login
               check_path: login
+            guard:
+              authenticators:
+                  - app.token_authenticator
+            # if you want, disable storing the user in the session
+            # stateless: true
+
+            # maybe other things, like form_login, remember_me, etc
+            # ...
+
+            pattern:    ^/
+            http_basic: ~
+            provider: our_db_provider
+
             # activate different ways to authenticate
 
             # http_basic: ~
