--- a/symfony/app/config/security.yml
+++ b/symfony/app/config/security.yml
@@ -4,8 +4,8 @@ security:
     encoders:
         Symfony\Component\Security\Core\User\User: plaintext
         AppBundle\Entity\User:
-            algorithm: plaintext
-#            algorithm: bcrypt
+#            algorithm: plaintext
+            algorithm: bcrypt
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
         in_memory:
